--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,42 @@
 # Header
 menu:
-  Home: /
-  Archives: /archives
+  首页: /
+  文章: /archives
+  关于: /about
+  公益: /404.html
 rss: /atom.xml
 
 # Content
-excerpt_link: Read More
+excerpt_link: 阅读更多
 fancybox: true
 
 # Sidebar
 sidebar: right
 widgets:
 - category
-- tag
-- tagcloud
-- archive
+- weibo
+# - tag
 - recent_posts
+- tagcloud
+# - archive
 
 # display widgets at the bottom of index pages (pagination == 2)
 index_widgets:
-# - category
-# - tagcloud
-# - archive
+- category
+- tagcloud
+- archive
 
 # widget behavior
 archive_type: 'monthly'
 show_count: false
 
 # Miscellaneous
-google_analytics:
+google_analytics: UA-65272132-2
 gauges_analytics:
 favicon: /favicon.png
 twitter:
 google_plus:
 fb_admins:
 fb_app_id:
+  
+duoshuo_shortname: yehuo0911
